# django-kanban

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml
apps/accounts/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/boards/: admin.py  apps.py  router.py  serializers.py  tests.py  views.py
apps/boards/migrations/: 0001_initial.py
apps/boards/models/: __init__.py  board.py  column.py
apps/projects/: admin.py  router.py  serializers.py  views.py
apps/projects/migrations/: 0001_initial.py
apps/projects/models/: project.py
apps/tasks/: admin.py  router.py  serializers.py  views.py
apps/tasks/migrations/: 0001_initial.py
apps/tasks/models/: __init__.py  comment.py  label.py  sprint.py  task.py
common/: apps.py  exceptions.py  models.py  permissions.py  services.py  throttling.py  utils.py  viewsets.py
common/management/commands/: fill_db.py  warm_up_cache.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  production.py  staging.py
prometheus-monitoring/alertmanager/: config.yml
prometheus-monitoring/prometheus/: prometheus.yml
prometheus-monitoring/prometheus/rules/: node_alerts.yml  recording_rules.yml
